Atualização do PIX em 15/04/2025 19:44

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 <body onload='copiarTextoAuto()'>
     <div class='container'>
         <h2>💳 PIX - Detalhes da Cobrança</h2>
-        <p><strong>Recebedor:</strong> KATAMA11</p>
+        <p><strong>Recebedor:</strong> KATAMA</p>
         <p><strong>Cidade:</strong> VILHENA</p>
-        <p><strong>Valor:</strong> R$ 15.99</p>
-        <p><strong>TxID:</strong> 4db96d3fa0d342bb9506f0159</p>
+        <p><strong>Valor:</strong> R$ 19.99</p>
+        <p><strong>TxID:</strong> 078d7d8996124d1ca728dcdcf</p>
         <p><strong>Pix Copia e Cola:</strong></p>
-        <div class='copia' id='copiaTexto'>00020101021226900014br.gov.bcb.pix2568pix.sicoob.com.br/qr/payload/v2/3ac22145-a572-49ea-833a-ddb293e565e75204000053039865802BR5913Nao_informado6013Nao_informado62070503***63047F46</div>
+        <div class='copia' id='copiaTexto'>00020101021226900014br.gov.bcb.pix2568pix.sicoob.com.br/qr/payload/v2/48e388f0-eef3-4abb-87b6-483f2980c6445204000053039865802BR5913Nao_informado6013Nao_informado62070503***63045084</div>
         <button onclick='copiarTexto()'>📋 Copiar Pix</button>
         <h3>QR Code</h3>
-        <img src='https://chart.googleapis.com/chart?chs=260x260&cht=qr&chl=00020101021226900014br.gov.bcb.pix2568pix.sicoob.com.br%2Fqr%2Fpayload%2Fv2%2F3ac22145-a572-49ea-833a-ddb293e565e75204000053039865802BR5913Nao_informado6013Nao_informado62070503%2A%2A%2A63047F46' width='260' height='260' />
+        <img src='https://chart.googleapis.com/chart?chs=260x260&cht=qr&chl=00020101021226900014br.gov.bcb.pix2568pix.sicoob.com.br%2Fqr%2Fpayload%2Fv2%2F48e388f0-eef3-4abb-87b6-483f2980c6445204000053039865802BR5913Nao_informado6013Nao_informado62070503%2A%2A%2A63045084' width='260' height='260' />
     </div>
     <script>
         function copiarTexto() {
